--- a/src/main/resources/static/scheme.html
+++ b/src/main/resources/static/scheme.html
@@ -71,7 +71,8 @@
                 <div class="col-1">
                     <div class="panel panel-default templatemo-content-widget white-bg no-padding templatemo-overflow-hidden">
                         <i class="fa fa-times"></i>
-                        <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">种类列表</h2>
+                        <div class="panel-heading templatemo-position-relative"><h2 id="schemeName"
+                                                                                    class="text-uppercase">种类列表</h2>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped table-bordered" id="scheme-table">
@@ -115,7 +116,9 @@
             <div class="templatemo-flex-row">
                 <div class="col-1" style="text-align: center">
                     <button id="add-new-row" class="templatemo-blue-button">添加新行</button>
-                    <button id="submit-scheme" class="templatemo-blue-button">提交</button>
+                    <button id="submit-scheme" class="my-button-green">提交</button>
+                    <button id="exportExcel" class="templatemo-blue-button">导出Excle</button>
+
                 </div>
             </div>
         </div>
@@ -126,12 +129,14 @@
 <script>
 
     var schemeID = 0;
+    var schemeName = "";
     $(document).ready(function () {
 //        $("#scheme-table").editableTableWidget();
         $.fn.editable.defaults.mode = 'inline';
 
         if (getQueryString("schemeID")) {
             schemeID = getQueryString("schemeID");
+            schemeName = getQueryString("schemeName");
             showScheme(getScheme(schemeID));
             initEdit();
         }
@@ -139,6 +144,7 @@
         chooseImgButton();
         addButtonClick();
         submitSchemeClick();
+        exportExcel();
     });
 
     function getScheme(schemeID) {
@@ -155,6 +161,7 @@
     }
 
     function showScheme(scheme) {
+        $("#schemeName").text(schemeName);
         var content = "";
         var schemeBody = $("#scheme-body");
         for (var loop = 0; loop < scheme.length; loop++) {
@@ -175,7 +182,7 @@
                 '<td hidden><input class="addImage" name="comment-image" type="file"></td>' +
                 "<td class='plant-price my-td'>" + plant.price + "</td>" +
                 "<td class='plant-price-sum my-td'>" + plant.price * scheme[loop].number + "</td>" +
-                "<td style='white-space:nowrap'><a class='templatemo-edit-btn' href='' onclick='deleteColumn(" + scheme[loop].row + ")'>删除</a><a class='templatemo-edit-btn' href='' onclick='insertAfter(this);return false;'>在下添加行</a></td>" +
+                "<td class='my-td' style='white-space:nowrap'><a class='templatemo-edit-btn' href='' onclick='deleteColumn(" + scheme[loop].row + ",this);return false;'>删除</a><a class='templatemo-edit-btn' href='' onclick='insertAfter(this);return false;'>在下添加行</a></td>" +
                 "</tr>";
         }
         schemeBody.empty();
@@ -188,12 +195,13 @@
 
     function submitSchemeClick() {
         $("#submit-scheme").on('click', function () {
-            sendTableArticles(schemeID);
-            showScheme(getScheme(schemeID));
-            initEdit();
-            addImageButton();
-            chooseImgButton();
-            addButtonClick();
+            if (sendTableArticles(schemeID)) {
+                showScheme(getScheme(schemeID));
+                initEdit();
+                addImageButton();
+                chooseImgButton();
+                addButtonClick();
+            }
         });
     }
 
@@ -228,7 +236,7 @@
                 '<td hidden><input class="addImage" name="comment-image" type="file"></td>' +
                 "<td class='plant-price my-td'></td>" +
                 "<td class='plant-price-sum my-td'></td>" +
-                "<td style='white-space:nowrap my-td'><a class='templatemo-edit-btn' href='' onclick='deleteNoSave(this);return false;'>删除</a></td>" +
+                "<td class='my-td' style='white-space:nowrap my-td'><a class='templatemo-edit-btn' href='' onclick='deleteNoSave(this);return false;'>删除</a><a class='templatemo-edit-btn' href='' onclick='insertAfter(this);return false;'>在下添加行</a></td>" +
                 "</tr>";
             var body = $("#scheme-body");
             body.append(rowContent);
@@ -240,7 +248,7 @@
     }
 
 
-    function deleteColumn(row) {
+    function deleteColumn(row, a) {
         $.ajax({
             url: '/scheme/delete',
             data: {row: row, schemeID: schemeID},
@@ -252,6 +260,7 @@
                 alert("失败");
             }
         });
+        $(a).parent().parent().remove();
     }
 
 
@@ -304,6 +313,7 @@
             'comment',
             'commentImage'
         ];
+        var trLen = $('#scheme-body').find('tr').length;
         var tableObject = $('#scheme-body').find('tr').map(function (i) {
             var row = {};
             row["row"] = $(this).attr('row');
@@ -335,7 +345,11 @@
             return row;
         }).get();
         for (var loop = 0; loop < tableObject.length; loop++) {
-            if (typeof(tableObject[loop]['plantID']) === "undefined" || tableObject[loop]['number'] === 'Empty') {
+            if (loop === tableObject.length - 1) {
+                if (tableObject[loop]['plantID'] === "undefined" || tableObject[loop]['number'] === '请输入数量') {
+                    tableObject = tableObject.slice(0, tableObject.length - 1);
+                }
+            } else if (typeof(tableObject[loop]['plantID']) === "undefined" && tableObject[loop]['number'] === '请输入数量') {
                 alert("植物或数量不能为空");
                 return false;
             }
@@ -365,12 +379,13 @@
             contentType: 'application/json',
             async: false,
             success: function (data) {
-                alert("成功！");
+                alert(data);
             },
             error: function () {
                 alert("失败");
             }
         });
+        return true
 //        $.post('@{OrdenComprasDetalles.update()}',
 //            {objects:tableObject},
 //            function (response) {
@@ -433,6 +448,10 @@
             type: 'text',
             emptytext: ' '
         });
+        $(".comment").editable({
+            type: 'text',
+            emptytext: ' '
+        });
 
         /**
          * 数量更新 ==》 类型价格和本金更新
@@ -472,6 +491,11 @@
             $(this).parent().find('td.plant-price').text(getPrice(params.newValue));
             if (num > 0) {
                 $(this).parent().find('td.plant-price-sum').text(getPrice(params.newValue) * num);
+            }
+            if (params.newValue && $("#scheme-body").find('tr').last().find('td.plant-name').text()) {
+                $('#add-new-row').fadeIn('slow', function () {
+                    $('#add-new-row').click();
+                });
             }
 //            $('.plant-name').editable('destroy');
         });
@@ -541,7 +565,7 @@
             '<td hidden><input class="addImage" name="comment-image" type="file"></td>' +
             "<td class='plant-price my-td'></td>" +
             "<td class='plant-price-sum my-td'></td>" +
-            "<td style='white-space:nowrap my-td'><a class='templatemo-edit-btn' href='' onclick='deleteNoSave(this);return false;'>删除</a></td>" +
+            "<td style='white-space:nowrap my-td'><a class='templatemo-edit-btn' href='' onclick='deleteNoSave(this);return false;'>删除</a><a class='templatemo-edit-btn' href='' onclick='insertAfter(this);return false;'>在下添加行</a></td>" +
             "</tr>";
         var body = $("#scheme-body");
         elem.after(rowContent);
@@ -565,12 +589,20 @@
         addRow(elem.parent().parent(), insertRow + 1);
     }
 
+    function exportExcel() {
+        $("#exportExcel").on("click", function () {
+            var url = "/getExcel?schemeID=" + schemeID + "&schemeName=" + schemeName;
+            alert(url);
+            window.open(url);
+        });
+    }
+
 
     function getQueryString(name) {
         var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
         var r = window.location.search.substr(1).match(reg);
         if (r !== null)
-            return unescape(r[2]);
+            return decodeURI(r[2]);
         return null;
     }
 </script>
