--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,9 @@
                 <button type="submit" class="fa fa-search"></button>
                 <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
             </div>
+            <div class="input-group">
+                <li id="cc"></li>
+            </div>
         </form>
         <div class="mobile-menu-icon">
             <i class="fa fa-bars"></i>
@@ -143,6 +146,9 @@
                             </table>
                         </div>
                     </div>
+                    <div style="text-align: center">
+                        <ul class="pagination" id="pagination"></ul>
+                    </div>
                 </div>
 
             </div>
@@ -160,17 +166,21 @@
 <script src="js/bootstrap-editable.min.js"></script>
 <!--<script src="js/mocsAjax.js"></script>-->
 <script type="text/javascript" src="js/templatemo-script.js"></script>      <!-- Templatemo Script -->
-
+<script src="js/jqPaginator.min.js"></script>
 <script>
-
+    var totalPages = 0;
+    var currentPage = 1;
 
 
     $(document).ready(function () {
+//        $("input[type='text']").bind('input propertychange',function () {
+//           $("#cc").html($("input[type='text']").val());
+//        });
         $(".img").blur(function () {
             var id = $(this).next();
             alert(id);
         });
-        clear();
+        paginator();
 //        $('#plant-form-sub').click(function(){
 //            $('#plant-form').submit();
 //            sleep(1000);
@@ -181,13 +191,29 @@
 //        initEdit();
     });
 
-    function clear(){
+    function paginator() {
+        var SIZE = 10;
+        if (totalPages === 0 && currentPage === 1)
+            clear(currentPage, SIZE);
+        $('#pagination').jqPaginator({
+            totalPages: totalPages,
+            visiblePages: SIZE,
+            currentPage: currentPage + 1,
+            onPageChange: function (num, type) {
+                currentPage = num;
+                clear(num, SIZE);
+                //$('#text').html('当前第' + num + '页');
+            }
+        });
+    }
+
+    function clear(page,size){
         $(':input','#plant-form')
             .not(':button, :submit, :reset, :hidden')
             .val('')
             .removeAttr('checked')
             .removeAttr('selected');
-        showInfo();
+        showInfo(page,size);
         initPlantType();
     }
 
